--- a/code-rangers/package.json
+++ b/code-rangers/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-
+    "@auth/core": "^0.34.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^10.4.20",
-    "@auth/core": "^0.34.2",
     "@types/bcryptjs": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "mongoose": "^8.12.1",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
@@ -23,7 +23,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
-
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
